# rust_stm32f4_discovery_example

./: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs
