[package]
authors = ["Jorge Muñoz <punkto@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# https://github.com/stm32-rs/stm32f4xx-hal
[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f407"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
